Fix - quiz attempt details summary info alignment issue

--- a/assets/scss/modules/quiz-attempts.scss
+++ b/assets/scss/modules/quiz-attempts.scss
@@ -66,6 +66,10 @@
 	}
 	
 	tr {
+		td{
+			vertical-align: middle;
+		}
+		
 		&:not(:hover) {
 			&.tutor-quiz-answer-status-correct {
 				.tutor-icon-rounded.tutor-color-danger {
